--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="source"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="lib/jsfml.jar"/>
+	<classpathentry kind="lib" path="lib/jsfml.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="http://www.jsfml.org/javadoc"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
